--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
         "nspell": "^2.1.2",
         "oniguruma": "^7.2.0",
         "textmate-bailout": "^1.1.0",
-        "vsce": "^1.99.0",
-        "textmate-tester": "^1.1.0"
+        "textmate-tester": "1.1.1",
+        "vsce": "^1.99.0"
     }
 }
