fix: Detect more modern Prolog file extensions

--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
                     "prolog"
                 ],
                 "extensions": [
-                    ".pl"
+                    ".pl",
+                    ".pro",
+                    ".prolog"
                 ],
                 "configuration": "./prolog.configuration.json"
             }
